--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -2,13 +2,16 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TolyID.MVVM.Views.TatuView"
+             xmlns:viewmodel="clr-namespace:TolyID.MVVM.ViewModels"
+             xmlns:model="clr-namespace:TolyID.MVVM.Models"
+             x:DataType="viewmodel:TatuViewModel"
              Title="{Binding Tatu.IdentificacaoAnimal}"           
              Shell.BackgroundColor="{StaticResource Primary}"
              Shell.TitleColor="White"
              BackgroundColor="White">
 
     <ContentPage.Resources>
-        <DataTemplate x:Key="CapturasTemplate">
+        <DataTemplate x:Key="CapturasTemplate" x:DataType="model:CapturaModel">
             <Frame Margin="0, 5, 0, 5" Padding="10" BorderColor="{StaticResource Primary}" InputTransparent="True">
                 <StackLayout>
                     <Label Text="{Binding Id, StringFormat='Captura N° {0}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
