--- a/TolyID/MVVM/Views/TatusCadastradosView.xaml
+++ b/TolyID/MVVM/Views/TatusCadastradosView.xaml
@@ -11,7 +11,7 @@
     <Shell.TitleView>
         <Grid ColumnDefinitions="70*, 15*, 15*">
             <Label Text="Tatus" TextColor="White" FontSize="20" FontAttributes="Bold" VerticalOptions="Center"/>
-            <Button Grid.Column="1" ImageSource="icone_atualizar.png" HorizontalOptions="End" Clicked="Atualizar_Clicked"/>
+            <Button Grid.Column="1" ImageSource="icone_atualizar.png" HorizontalOptions="End" Clicked="Atualizar_Clicked" BackgroundColor="Transparent"/>
             <Button Grid.Column="2" Scale=".8" ImageSource="icone_mais_branco.png" HorizontalOptions="End" Clicked="AdicionarTatu_Clicked" BackgroundColor="Transparent"/>
         </Grid>
     </Shell.TitleView>
