--- a/TolyID/Resources/Styles/Styles.xaml
+++ b/TolyID/Resources/Styles/Styles.xaml
@@ -22,7 +22,20 @@
         <Setter Property="VerticalOptions" Value="Center"/>
     </Style>
 
+    <Style x:Key="LabelParametrosFisiologicos" TargetType="Label">
+        <Setter Property="TextColor" Value="Black"/>
+        <Setter Property="FontSize" Value="17"/>
+        <Setter Property="HorizontalTextAlignment" Value="Start"/>
+        <Setter Property="VerticalTextAlignment" Value="Center"/>
+    </Style>
+
     <Style x:Key="FrameEntradaDeDados" TargetType="Frame">
+        <Setter Property="BorderColor" Value="{StaticResource Primary}"/>
+        <Setter Property="Padding" Value="15, 3, 0, 0"/>
+        <Setter Property="HeightRequest" Value="50"/>
+    </Style>
+
+    <Style x:Key="FrameParametrosFisiologicos" TargetType="Frame">
         <Setter Property="BorderColor" Value="{StaticResource Primary}"/>
         <Setter Property="Padding" Value="5,0,5,0"/>
         <Setter Property="Margin" Value="0, 0, 0, 5"/>
@@ -33,7 +46,26 @@
         <Setter Property="TextColor" Value="{StaticResource Primary}"/>
         <Setter Property="FontAttributes" Value="Bold"/>
     </Style>
-    
+
+    <Style x:Key="EntryNumerico" TargetType="Entry">
+        <Setter Property="TextColor" Value="Black"/>
+        <Setter Property="Placeholder" Value="Digite"/>
+        <Setter Property="Keyboard" Value="Numeric"/>
+    </Style>
+
+    <Style x:Key="EntryTexto" TargetType="Entry">
+        <Setter Property="TextColor" Value="Black"/>
+        <Setter Property="Placeholder" Value="Digite"/>
+    </Style>
+
+    <Style x:Key="DatePicker" TargetType="DatePicker">
+        <Setter Property="TextColor" Value="Black"/>
+    </Style>
+
+    <Style x:Key="TimePicker" TargetType="TimePicker">
+        <Setter Property="TextColor" Value="Black"/>
+    </Style>
+
     <!-- PADRÕES DO SISTEMA -->
 
     <Style TargetType="ActivityIndicator">
